--- a/main.html
+++ b/main.html
@@ -9,71 +9,69 @@
     <title> Project III </title>
 </head>
 <body>
-    <h1 id="top"> DIII Soccer Center </h1> 
+    <h1 id="top"> MonsieurStryker </h1> 
+        <p id="topUnder"> Member of HPLA Gaming </p>
     <nav>
         <section>
-            <a href="#news"> News </a> 
-            <a href="#schedule"> Schedule </a> 
-            <a href="stats"> Stats </a> 
-            <a href="#form"> Sign-Up </a> 
+            <a href="#live">Live</a> 
+            <a href="#form">Subscribe</a> 
+            <a href="#clips">Edits</a> 
+            <a href="#streams">Past Streams</a> 
+            <a href="#links">Links</a> 
         </section>
     </nav>
-    <main class="grey-box" id="news">     <!-- news -->
+    <div id="live">     <!-- live -->
+        <p id="header-live">Live Stream</p>
+        <iframe id="restream" src="https://player.restream.io? token=re_2358130_86dfe2217b78f0be59b7" width="560" height="315" allow="fullscreen" frameborder="0"></iframe>
         <img id="main-img1" src=>
-        <img id="main-img2" src="hxhmain.jpg"> 
-        <img id="main-img3" src="onepunch.jpg"> 
-        <p id="main-txt1"> "Does Young Midoriya have what it takes?..." <a href="monsieurSanime.com/blog/post1"> READ MORE </a> </p>
-        <p id="main-txt2"> "Will Hunter x Hunter ever return?..." <a href="monsieurSanime.com/blog/post2"> READ MORE </a> </p>
-        <p id="main-txt3"> "Watch S1 and hold off on S2 until S3 releases in its entirety..." <a href="monsieurSanime.com/blog/post3"> READ MORE </a> </p>
-    </main>
-    <aside> 
-        <h2> Rankings </h2>     <!-- rankings -->
-            <div class="rankings">
-                <ol> 
-                    <li> 
-                        <p> My Hero Academia </p> 
-                        <img src="mhalogo.png" height="50px" alt="MHA Logo" > 
-                    </li>
-                    <li> 
-                        <p> Hunter x Hunter </p> 
-                        <img src="hxhlogo.png" height="50px" alt="HxH Logo" >
-                    </li>
-                    <li> 
-                        <p> Deathnote </p>
-                        <img src="deathnotelogo.png" height="50px" alt="Deathnote Logo" >    
-                    </li>
-                    <li> 
-                        <p> Assassination Classroom </p> 
-                        <img src="assclasslogo.png" height="50px" alt="Assassination Classroom Logo" >
-                    </li>
-                    <li> 
-                        <p> Jujutsu Kaisen </p> 
-                        <img src="jujulogo.png" height="50px" alt="Jujutsu Kaisen Logo" >
-                    </li>
-                </ol>
-            </div>
-    </aside>
-    <div class="grey-box" id="schedule">    <!-- schedule  -->
-        <p> Schedule </p>
-        <p id="scroll-up">
-            <a href="#top" id="scroll-up"> -home- </a>
-        </p>
+        <p id="main-txt1">"-Stream Date-Stream Title-"</p>
+        <iframe id="chat" src="https://chat.restream.io/embed?token=dc036a3f-328e-4619-96c0-6543933d1680" width="560" height="315" allow="fullscreen" frameborder="0"></iframe>
     </div>
-    <div class="grey-box" id="stats">  <!-- stats -->
-        <p> Stats </p>
+    <div id="form">    <!-- form -->
+        <p>Newsletter Sign-Up</p>
         <p id="scroll-up">
-            <a href="#top" id="scroll-up"> -home- </a>
+            <a href="#top" id="scroll-up">-return to top-</a>
         </p>
+        <form>
+        <fieldset>
+            <label for="full-name">Full Name</label>
+            <input type="text" id="full-name" placeholder="Your name here">
+            <label for="email">Email</label>
+            <input type="text" id="email" placeholder="name@email.com">
+            <input type="submit" value="Submit this form">
+        </fieldset>
+    </form>
     </div>
-    <div class="grey-box" id="form">    <!-- newsletter form -->
-        <p> Newsletter Sign-Up </p>
-        <p id="scroll-up">
-            <a href="#top" id="scroll-up"> -home- </a>
+    <div id="edits">  <!-- edits -->
+        <p id="header-edits">Edits</p>
+        <p class="scroll-edits" id="scroll-up">
+            <a href="#top" id="scroll-up">-return to top-</a>
         </p>
+        <iframe id="clip1" width="480" height="270" src="https://www.youtube.com/embed/W8XKbog3eto" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe id="clip2" width="480" height="270" src="https://www.youtube.com/embed/SLkqoyWkXg4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe id="clip3" width="480" height="270" src="https://www.youtube.com/embed/OlqAPkUZ9Ec" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <footer class="flex-ctr">  
+    <div id="streams">  <!-- streams -->
+        <p id="header-streams">Past Streams</p>
+        <p class="scroll-streams" id="scroll-up">
+            <a href="#top" id="scroll-up">-return to top-</a>
+        </p>
+        <iframe id="stream1" width="480" height="270" src="https://www.youtube.com/embed/JQbUbnnBBpA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>       
+        <iframe id="stream2" width="480" height="270" src="https://www.youtube.com/embed/UCyMR1WhxmY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+        <iframe id="stream3" width="480" height="270" src="https://www.youtube.com/embed/j5LnG2-HInw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div id="links">  <!-- links -->
+        <p id="header-links">Useful Links</p> 
+        <p class="scroll-links" id="scroll-up">
+            <a href="#top" id="scroll-up">-return to top-</a>
+        </p>
+        <ul>
+            <a href="https://www.twitch.tv/monsieurstryker">Twitch Channel</a>
+            <a href="https://www.youtube.com/channel/UC-4lZFQbFsJDPJNuseCOGqw">YouTube Channel</a>
+        </ul>
+    </div>
+    <footer class="flex-ctr" id="footer">  
         <div> All Rights Reserved. </div> 
-        <div> Contact Here </div>
         <div> 2022. </div>
     </footer>
 </body>
