--- a/main.html
+++ b/main.html
@@ -9,29 +9,31 @@
     <title> Project III </title>
 </head>
 <body>
-    <h1 id="top"> MonsieurStryker </h1> 
+    <div class="topGrid">
+        <h1 id="top"> MonsieurStryker </h1> 
         <p id="topUnder"> Member of HPLA Gaming </p>
-    <nav>
-        <section>
-            <a href="#live">Live</a> 
-            <a href="#form">Subscribe</a> 
-            <a href="#clips">Edits</a> 
-            <a href="#streams">Past Streams</a> 
-            <a href="#links">Links</a> 
-        </section>
-    </nav>
+        <img class="img1" src="images/hpla crest 19201080.png" alt="HPLA Gaming Crest">
+        <img class="img2" src="images/MS4.png" alt="MS Logo">
+        <nav>
+            <section>
+                <a href="#live">Live</a> 
+                <a href="#form">Subscribe</a> 
+                <a href="#edits">Edits</a> 
+                <a href="#streams">Past Streams</a> 
+                <a href="#links">Links</a> 
+            </section>
+        </nav>
+    </div>
     <div id="live">     <!-- live -->
         <p id="header-live">Live Stream</p>
-        <iframe id="restream" src="https://player.restream.io? token=re_2358130_86dfe2217b78f0be59b7" width="560" height="315" allow="fullscreen" frameborder="0"></iframe>
+        <iframe id="livestream" width="560" height="315" src="https://www.youtube.com/embed/live_stream?channel=UC-4lZFQbFsJDPJNuseCOGqw" frameborder="0" allowfullscreen></iframe>
         <img id="main-img1" src=>
-        <p id="main-txt1">"-Stream Date-Stream Title-"</p>
+        <p id="main-txt1">-OFFLINE-</p>
         <iframe id="chat" src="https://chat.restream.io/embed?token=dc036a3f-328e-4619-96c0-6543933d1680" width="560" height="315" allow="fullscreen" frameborder="0"></iframe>
+        <p id="main-txt2">Live Chat</p>
     </div>
     <div id="form">    <!-- form -->
         <p>Newsletter Sign-Up</p>
-        <p id="scroll-up">
-            <a href="#top" id="scroll-up">-return to top-</a>
-        </p>
         <form>
         <fieldset>
             <label for="full-name">Full Name</label>
@@ -61,18 +63,21 @@
         <iframe id="stream3" width="480" height="270" src="https://www.youtube.com/embed/j5LnG2-HInw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div id="links">  <!-- links -->
-        <p id="header-links">Useful Links</p> 
-        <p class="scroll-links" id="scroll-up">
-            <a href="#top" id="scroll-up">-return to top-</a>
-        </p>
+        <p id="header-links">Useful Links</p>
         <ul>
             <a href="https://www.twitch.tv/monsieurstryker">Twitch Channel</a>
             <a href="https://www.youtube.com/channel/UC-4lZFQbFsJDPJNuseCOGqw">YouTube Channel</a>
         </ul>
     </div>
     <footer class="flex-ctr" id="footer">  
+        <p class="scroll-footer" id="scroll-up">
+            <a href="#top" id="scroll-up">-return to top-</a>
+        </p>
         <div> All Rights Reserved. </div> 
         <div> 2022. </div>
+        <p class="scroll-footer" id="scroll-up">
+            <a href="#top" id="scroll-up">-return to top-</a>
+        </p>
     </footer>
 </body>
 </html>
