--- a/main.html
+++ b/main.html
@@ -16,11 +16,12 @@
         <img class="img2" src="images/MS4.png" alt="MS Logo">
         <nav>
             <section>
-                <a href="#live">Live</a> 
-                <a href="#form">Subscribe</a> 
-                <a href="#edits">Edits</a> 
-                <a href="#streams">Past Streams</a> 
-                <a href="#links">Links</a> 
+                <a href="#" id="hamburger-icon">&#9776;</a>
+                <a class="main-nav-item" href="#live">Live</a> 
+                <a class="main-nav-item" href="#form">Subscribe</a> 
+                <a class="main-nav-item" href="#edits">Edits</a> 
+                <a class="main-nav-item" href="#streams">Past Streams</a> 
+                <a class="main-nav-item" href="#links">Links</a> 
             </section>
         </nav>
     </div>
@@ -43,6 +44,9 @@
             <input type="submit" value="Submit this form">
         </fieldset>
     </form>
+    <div class="invalid">
+        Invalid submission, please refresh page and try again. 
+        </div>
     </div>
     <div id="edits">  <!-- edits -->
         <p id="header-edits">Edits</p>
@@ -70,12 +74,12 @@
         </ul>
     </div>
     <footer class="flex-ctr" id="footer">  
-        <p class="scroll-footer" id="scroll-up">
+        <p class="scroll-footer1" id="scroll-up">
             <a href="#top" id="scroll-up">-return to top-</a>
         </p>
         <div> All Rights Reserved. </div> 
         <div> 2022. </div>
-        <p class="scroll-footer" id="scroll-up">
+        <p class="scroll-footer2" id="scroll-up">
             <a href="#top" id="scroll-up">-return to top-</a>
         </p>
     </footer>
