nav addition of dropdown

--- a/main.html
+++ b/main.html
@@ -15,14 +15,20 @@
         <img class="img1" src="images/hpla crest 19201080.png" alt="HPLA Gaming Crest">
         <img class="img2" src="images/MS4.png" alt="MS Logo">
         <nav>
-            <section>
-                <a href="#" id="hamburger-icon">&#9776;</a>
-                <a class="main-nav-item" href="#live">Live</a> 
-                <a class="main-nav-item" href="#form">Subscribe</a> 
-                <a class="main-nav-item" href="#edits">Edits</a> 
-                <a class="main-nav-item" href="#streams">Past Streams</a> 
-                <a class="main-nav-item" href="#links">Links</a> 
-            </section>
+            <a class="main-nav-item" href="#live">Live</a> 
+            <a class="main-nav-item" href="#form">Subscribe</a> 
+            <a class="main-nav-item" href="#edits">Edits</a> 
+            <a class="main-nav-item" href="#streams">Past Streams</a> 
+            <a class="main-nav-item" href="#links">Links</a> 
+            <div class="dropdown">
+                <button href="#" id="hamburger-icon">&#9776;</a>
+                <div class="dropdown-content">
+                    <a class="drop-item" href="#live">Live</a> 
+                    <a class="drop-item" href="#form">Subscribe</a> 
+                    <a class="drop-item" href="#edits">Edits</a> 
+                    <a class="drop-item" href="#streams">Past Streams</a> 
+                    <a class="drop-item" href="#links">Links</a> 
+            </div>
         </nav>
     </div>
     <div id="live">     <!-- live -->
