--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <div id="links">  <!-- links -->
         <p id="header-links">Useful Links</p>
         <ul>
-            <a href="https://www.twitch.tv/monsieurstryker">Twitch Channel</a>
-            <a href="https://www.youtube.com/channel/UC-4lZFQbFsJDPJNuseCOGqw">YouTube Channel</a>
+            <a id="link1" href="https://www.twitch.tv/monsieurstryker">Twitch Channel</a>
+            <a id="link2" href="https://www.youtube.com/channel/UC-4lZFQbFsJDPJNuseCOGqw">YouTube Channel</a>
         </ul>
     </div>
     <footer class="flex-ctr" id="footer">  
